Adding preference to unblock sites on breaks only.
Adding a preference that blocks sites at the end of a pomodoro so that
blocked sites can only be accessed during break time, encouraging the
start of a new Pomodoro at the end of a break to get back to break time!

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -86,6 +86,10 @@
     "message": "Save successful",
     "description": "On the options page, message to indicate that the options have been saved"
   },
+  "options_break_unblock_only": {
+    "message": "Unblock sites on breaks only",
+    "description": "On the options page, label for the checkbox to unblock sites on breaks only"
+  },
   
   "timer_end_notification_header": {
     "message": "Time's up!",
