--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -71,8 +71,12 @@
     "description": "On the options page, label for the checkbox that enables/disables ringing sound at the end of a timer"
   },
   "options_click_restarts": {
-    "message": "Clicking on a running timer restarts it",
+    "message": "Clicking on a running work timer restarts it",
     "description": "On the options page, label for the checkbox that enables/disables the feature that clicking on a running timer restarts it"
+  },
+  "options_click_skips": {
+    "message": "Clicking on a running break timer starts a new work period",
+    "description": "On the options page, label for the checkbox that enables/disables the feature that clicking on a running break timer starts a work period"
   },
   "options_click_restarts_note": {
     "message": "By the strictness philosophy, the only way to <em>cancel</em> a running timer is to disable the extension.",
