--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "ext_name": {
-    "message": "Strict Workflow",
+    "message": "SWorkflow",
     "description": "Name of the extension"
   },
   "ext_description": {
